ajustando as rotas