@@ -1,130 +1,89 @@
 package com.test.cine_stream_test.controller;
 
-import com.test.cine_stream_test.service.UsuarioService;
+import com.test.cine_stream_test.dto.request.FilmeFavoritoRequest;
+import com.test.cine_stream_test.exception.NotFoundException;
+import com.test.cine_stream_test.service.FilmeService;
 import com.test.cine_stream_test.tmdbapi.dto.response.Page;
 import com.test.cine_stream_test.tmdbapi.dto.response.TmdbFilme;
 import com.test.cine_stream_test.tmdbapi.dto.response.TmdbListaGeneros;
-import com.test.cine_stream_test.dto.request.FilmeFavoritoRequest;
-import com.test.cine_stream_test.service.FilmeService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.mockito.MockitoAnnotations;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
-import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
-import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.List;
+import java.util.Collections;
 
-@SpringBootTest
-@AutoConfigureMockMvc
-@ExtendWith(MockitoExtension.class)
+import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+
 public class FilmeControllerComponentTest {
+
+    private MockMvc mockMvc;
 
     @Mock
     private FilmeService filmeService;
 
-    @Mock
-    private UsuarioService usuarioService;
-
-    @Autowired
-    private MockMvc mockMvc;
-
     @InjectMocks
     private FilmeController filmeController;
 
-    @Test
-    public void todosFilmes_realizoConsulta_deveRetornarFilmesDaBase() throws Exception {
-        // Dado
-        var tmdbFilme = new TmdbFilme("Inception", "A mind-bending thriller", "2010-07-16", 8.8, "/posterPath.jpg", 12345L);
-        var page = new Page<TmdbFilme>();
-        page.setResults(List.of(tmdbFilme));
-        Mockito.when(filmeService.buscarTodosFilmes(1)).thenReturn(page);
-
-        // Quando
-        mockMvc.perform(
-                        MockMvcRequestBuilders.get("/api/filmes")
-                                .accept(MediaType.APPLICATION_JSON)
-                )
-                // Então
-                .andDo(MockMvcResultHandlers.print())
-                .andExpect(MockMvcResultMatchers.status().isOk())
-                .andExpect(MockMvcResultMatchers.jsonPath("$.results[0].title").value("Inception"));
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
+        mockMvc = MockMvcBuilders.standaloneSetup(filmeController).build();
     }
 
     @Test
-    public void buscarPorTitulo_realizoConsultaPorTitulo_deveRetornarFilmeDaBase() throws Exception {
-        // Dado
-        var tmdbFilme = new TmdbFilme("Inception", "A mind-bending thriller", "2010-07-16", 8.8, "/posterPath.jpg", 12345L);
-        var page = new Page<TmdbFilme>();
-        page.setResults(List.of(tmdbFilme));
-        Mockito.when(filmeService.buscarFilmePorTitulo("Inception", 1)).thenReturn(page);
+    public void getTodosFilme_deveRetornarListaDeFilmes() throws Exception {
+        Page<TmdbFilme> filmes = new Page<>();
+        TmdbFilme filme = new TmdbFilme("Titulo do Filme", "Descricao do Filme", "Diretor do Filme", 8.5, "/poster/path.jpg", 12345L);
+        filmes.setResults(Collections.singletonList(filme));
+        when(filmeService.buscarTodosFilmes(1)).thenReturn(filmes);
 
-        // Quando
-        mockMvc.perform(
-                        MockMvcRequestBuilders.get("/api")
-                                .param("titulo", "Inception")
-                                .accept(MediaType.APPLICATION_JSON)
-                )
-                // Então
-                .andDo(
-                        MockMvcResultHandlers.print()
-                ).andExpect(
-                        MockMvcResultMatchers.status().isOk()
-                ).andExpect(
-                        MockMvcResultMatchers.jsonPath("$.results[0].title").value("Inception")
-                );
+        mockMvc.perform(get("/filmes/all-filmes").param("page", "1"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.results").isArray());
     }
 
     @Test
-    public void adicionarFilmeFavorito_semInformarFilme_deveRetornarBadRequest() throws Exception {
-        // Dado
-        var filmeFavoritoRequest = """
-                {
-                  "userId": 1
-                }
-                """;
+    public void getGenres_deveRetornarListaDeGeneros() throws Exception {
+        TmdbListaGeneros generos = new TmdbListaGeneros();
+        generos.setGenres(Collections.singletonList(new TmdbListaGeneros.Genre("Ação", 1)));
+        when(filmeService.buscarGeneros()).thenReturn(generos);
 
-        // Quando
-        mockMvc.perform(
-                MockMvcRequestBuilders.post("/api/favorito")
-                        .accept(MediaType.APPLICATION_JSON)
+        mockMvc.perform(get("/filmes/genres"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.genres").isArray());
+    }
+
+    @Test
+    public void buscarPorTitulo_deveRetornarListaDeFilmes() throws Exception {
+        Page<TmdbFilme> filmes = new Page<>();
+        TmdbFilme filme = new TmdbFilme("Titulo do Filme", "Descricao do Filme", "Diretor do Filme", 8.5, "/poster/path.jpg", 12345L);
+        filmes.setResults(Collections.singletonList(filme));
+        when(filmeService.buscarFilmePorTitulo("Inception", 1)).thenReturn(filmes);
+
+        mockMvc.perform(get("/filmes").param("titulo", "Inception").param("page", "1"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.results").isArray());
+    }
+
+    @Test
+    public void adicionarFilmeFavorito_deveRetornarStatusCreated() throws Exception {
+        FilmeFavoritoRequest request = new FilmeFavoritoRequest();
+        request.setIdUsuario(1L);
+        request.setIdFilme(101L);
+
+        mockMvc.perform(post("/filmes/favorito")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(filmeFavoritoRequest)
-        ).andDo(
-                MockMvcResultHandlers.print()
-        ).andExpect(
-                MockMvcResultMatchers.status().isBadRequest()
-        );
-    }
-
-    @Test
-    public void getGenres_realizoConsulta_deveRetornarGenerosDaBase() throws Exception {
-        // Dado
-        var genero = new TmdbListaGeneros.Genre("Action", 28);
-        var tmdbGenero = new TmdbListaGeneros();
-        tmdbGenero.setGenres(List.of(genero));
-        Mockito.when(filmeService.buscarGeneros()).thenReturn(tmdbGenero);
-
-        // Quando
-        mockMvc.perform(
-                        MockMvcRequestBuilders.get("/api/genres")
-                                .accept(MediaType.APPLICATION_JSON)
-                )
-                // Então
-                .andDo(
-                        MockMvcResultHandlers.print()
-                ).andExpect(
-                        MockMvcResultMatchers.status().isOk()
-                ).andExpect(
-                        MockMvcResultMatchers.jsonPath("$.genres[0].name").value("Action")
-                );
+                        .content("{\"idUsuario\": 1, \"tmdbId\": 101}"))
+                .andExpect(status().isCreated());
     }
 }
